# scraping-tabnet

./: .ai-jail  .gitignore  CLAUDE.md  LICENSE  README.md  app.py  generate_figures.py  pyproject.toml  subgrupos.parquet
presentation/: index.html
src/scraping_tabnet/: build_parquet.py  dashboard.py  load_db.py  load_treated.py  scraper.py  subgrupos.py
